objects/project_cloud__Requirement_Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if a user would like to indicate that this Requirement Fulfillment has been completed.</inlineHelpText>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will show the Project Task that is related to the Requirement Fulfillment.</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Requirement Fulfillments</relationshipLabel>
        <relationshipName>Requirement_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Requirement__c</fullName>
        <inlineHelpText>This field will show the Requirement the Requirement Fulfillment is in relation too.</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>project_cloud__Requirement__c</referenceTo>
        <relationshipLabel>Requirement Fulfillments</relationshipLabel>
        <relationshipName>Requirement_Fulfillments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket</label>
        <referenceTo>project_cloud__Ticket__c</referenceTo>
        <relationshipLabel>Requirement Fulfillments</relationshipLabel>
        <relationshipName>Requirement_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirement Fulfillment</label>
    <nameField>
        <displayFormat>RF-{0}</displayFormat>
        <label>Requirement Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>